2006-05-29  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.6.2
	* NEWS : Updated

2006-05-12  Sankar P  <psankar@novell.com>

	* Committed on behalf of Patrick Ohly <patrick.ohly@intel.com> 
	* camel-stub.c: (stub_send_internal):
	Adds a NULL check before proceeding further
	
2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fix #341229
	* calendar/e-cal-backend-exchange-calendar.c:
	(modify_object_with_href): Set the old object so 
	that it gets refreshed properly.

2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #339561
	* calendar/e-cal-backend-exchange-calendar.c:
	(modify_object_with_href): check for modification of end times.
				   
2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #339827
	* calendar/e-cal-backend-exchange-calendar.c: (add_vevent),
	(get_changed_events), (create_object), (modify_object),
	(modify_object_with_href), (remove_object), (receive_objects),
	(book_resource), (discard_alarm):
	* calendar/e-cal-backend-exchange-tasks.c: (get_changed_tasks),
	(create_task_object), (modify_task_object), (receive_task_objects),
	(remove_task_object):
	* calendar/e-cal-backend-exchange.c:
	(e_cal_backend_exchange_cache_sync_end),
	(e_cal_backend_exchange_cache_lock),
	(e_cal_backend_exchange_cache_unlock), (get_object),
	(get_object_list), (start_query), (init), (finalize):
	* calendar/e-cal-backend-exchange.h: Set the cache lock while
	accessing the components from the hash table.

2006-05-10  Vandana Shenoy B  <shvandana@novell.com>

	* addressbook/e-book-backend-exchange.c (proppatch_address): Added a
	check for modifying a contact. Fixes #330265.

2006-05-10  Sushma Rai  <rsushma@novell.com>

	* mail/mail-stub-exchange.c (subscribe_folder): Not adding toplevel
	"All Public Folders" to the list of favorite folders. Fixes #339277. 

2006-05-10  Sushma Rai  <rsushma@novell.com>

	* mail/mail-stub-exchange.c (unsubscribe_folder): Extracting the folder